refactor: 導覽列搬到header.js

--- a/src/layout/footer.html
+++ b/src/layout/footer.html
@@ -21,29 +21,10 @@
                 <a href="#"><img src="./img/icon/instagram.svg" alt="" class="footerIcon"></a>
             </div>
         </div>
-        <p class="tibameMessage container-lg">本網站為緯育TibaMe前端設計工程師班第105期第六組學員專題成果作品，本平台僅供學習、展示之用。參考資源：<a href="">六甲山牧場</a>、<a href="">清境農場</a>。</p>
+        <p class="tibameMessage container-lg">本網站為緯育TibaMe前端設計工程師班第105期第六組學員專題成果作品，本平台僅供學習、展示之用。參考資源：<a
+                href="">六甲山牧場</a>、<a href="">清境農場</a>。</p>
     </div>
 
 </footer>
 
 <script src="js/header.min.js"></script>
-<script>
-    new Vue({
-        el: '#appMenu', 
-        data: {
-            // menu: ['Sìkha動物', '園區資訊', '最新消息', '牧場節目', '周邊商品'],
-            // menuLinks: ['animal.html', 'info.html', 'news.html', 'activity.html', 'products.html'],
-
-            menus: [
-                {title: 'Sìkha動物', link: '../animal.html', icon: './img/icon/animal_icon.png'},
-                {title: '園區資訊', link: '../info.html', icon: './img/icon/info_icon.png'},
-                {title: '最新消息', link: '../news.html', icon: './img/icon/news_icon.png'},
-                {title: '牧場節目', link: '../activity.html', icon: './img/icon/activity_icon.png'},
-                {title: '周邊商品', link: '../products.html', icon: './img/icon/products_icon.png'},
-                
-            ],
-        },
-    });
-
-
-</script>
