style: h6變動, 新增圓形按鈕mixin

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -57,6 +57,7 @@ p{
 h6{
     font-size: $fs-2xl;
     font-family: map-get($fontfamily, "eng");
+    color: $color_Y;
 
     @include mobile{
         font-size: $fs-xl;
