feat: 新增info.html, info.scss

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,5 +13,6 @@
 @import './frontpages/news.scss';
 @import './frontpages/news_in.scss';
 @import './frontpages/animal';
-@import './frontpages/checkout.scss'
+@import './frontpages/checkout.scss';
+@import './frontpages/info.scss';
 // @import './frontpages/product_detail.scss';
