feat: 新增結帳流程step1，修改checkout.js，新增商品圖 style: 修改aside登出icon

--- a/src/sass/layout/_back.aside.scss
+++ b/src/sass/layout/_back.aside.scss
@@ -31,8 +31,8 @@
                 padding: 20px 0;
             }
             a:hover{
-                background-color: $color_Y ;
-                color: $color_W;
+                background-color: $color_W ;
+                color: $color_Y;
             }
         }
     }
@@ -53,9 +53,10 @@
         &:hover{
             background-color: $color_W;
             color: $color_R;
-        }
-        &::after:hover{
-            background-image: url('../../img/icon/logout.png');
+
+            &::after{
+                background-image: url('../../img/icon/logout_R.png');
+            }
         }
     }
 }
