feat: 登入、註冊頁撰寫

--- a/src/layout/register.html
+++ b/src/layout/register.html
@@ -3,15 +3,14 @@
         <div class="shikaBlock"><h1><img src="../img/logo_white.svg" alt=""></h1></div>
         <div class="loginBlock ">
             <form action="" method="POST" id="login_form">
-                <h4>登入</h4>
+                <h4>註冊</h4>
                 <label for=""><h5>電子郵件</h5></label>
                 <input type="email" name="usermail">
                 <label for=""><h5>密碼</h5></label>
                 <input type="password" name="password">
-                <a href="#" class="forget">忘記密碼？</a>
-                <button type="submit" id="login_btn">登入</button>
-                <button type="button" id="FBlogin_btn">透過FACEBOOK登入</button>
-                <a href="#" class="register">還不是Sìkha會員嗎？點我註冊</a>
+                <label for=""><h5>確認密碼</h5></label>
+                <input type="password" name="password">
+                <button type="submit" id="next">繼續</button>
             </form>
             <i class="bi bi-x"></i>
         </div>
