style: 打開商品內頁sass

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,5 +13,5 @@
 @import './frontpages/news.scss';
 @import './frontpages/news_in.scss';
 @import './frontpages/animal';
-@import './frontpages/checkout.scss'
-// @import './frontpages/product_detail.scss';
+@import './frontpages/checkout.scss';
+@import './frontpages/product_detail.scss';
