--- a/src/sass/frontpages/_checkout.scss
+++ b/src/sass/frontpages/_checkout.scss
@@ -241,7 +241,12 @@
                 margin: 10px 40px;
             }
             .checkSame{
-                margin: 15px 10px 15px 40px
+                margin: 15px 10px 15px 40px;
+                width: 20px;
+                height: 20px;
+            }
+            .Same{
+                height: 20px;
             }
         }    
     }
