--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,3 +16,4 @@
 @import './frontpages/checkout.scss';
 @import './frontpages/info.scss';
 @import './frontpages/product_detail.scss';
+@import './frontpages/member.scss';
