--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,8 @@
 @import 'base/var';
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 @import 'base/reset';
+@import 'base/button';
 @import 'mixin/mixin';
 @import 'base/utility';
 @import 'base/typography';
@@ -8,8 +11,6 @@
 @import 'layout/header';
 @import 'layout/footer';
 @import 'frontpages/index';
-@import '../../node_modules/bootstrap/scss/bootstrap.scss';
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 @import './frontpages/news.scss';
 @import './frontpages/news_in.scss';
 @import './frontpages/animal';
