--- a/src/sass/backpages/_member_mg.scss
+++ b/src/sass/backpages/_member_mg.scss
@@ -49,14 +49,15 @@
         height: 40px;
         width: 285px;
         border-radius: 8px;
-        // outline: none;
+        padding: 10px;
         border: 2px solid #c4c4c4;
+        font-size: $fs-s;
     }
     // ===== page 12345 =====
     .mb_mgPage{
         display: flex;
         width: 100%;
-        margin-top: 20px;
+        margin: 20px auto;
         padding-left: 35%;
 
         a{
