--- a/src/layout/head.html
+++ b/src/layout/head.html
@@ -7,4 +7,5 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Oswald:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./js/vue.min.js"></script>
+    <script src="./js/vue.js"></script>
+    <!-- <script src="./js/vue.min.js"></script> -->
