--- a/src/layout/back_head.html
+++ b/src/layout/back_head.html
@@ -6,4 +6,5 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Oswald:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.back.css">
+    <link rel="icon" href="img/logo_web.ico" type="image/x-icon"/>
     <script src="./js/vue.min.js"></script>
