--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -37,18 +37,16 @@
   
 //切換按鈕
 .switch {
-position: relative;
-display: inline-block;
-width: 60px;
-height: 34px;
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+        input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
 }
-
-.switch input {
-opacity: 0;
-width: 0;
-height: 0;
-}
-
 
 .slider {
     position: absolute;
@@ -95,3 +93,77 @@ input:checked + .slider:before {
         border-radius: 50%;
     }
 }
+
+
+// checkbox
+/* Customize the label (the check_container) */
+.check_container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    
+    input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0;
+    }
+
+    .checkmark {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 25px;
+        width: 25px;
+        outline: 1px solid $color-G;
+        border-radius: 3px;
+        transition: .3s;
+    }
+
+
+  }
+  
+
+  /* On mouse-over, add a grey background color */
+  .check_container:hover input ~ .checkmark {
+    // background-color: $color-G;
+    outline: 2px solid darken($color-G, 10);
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .check_container input:checked ~ .checkmark {
+    background-color: $color-G;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .check_container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .check_container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
