--- a/src/sass/backpages/_back_products.scss
+++ b/src/sass/backpages/_back_products.scss
@@ -1,9 +1,131 @@
+#back_pds {
+  .pds_right {
+    padding-left: 20%;
+    margin: 0 5%;
 
-
-#back_pds{
-    .pds_right{
-        padding-left: 20%;
-
-        @include back_title;
-    }
+    @include back_title;
+  }
 }
+
+.button_area {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  button {
+    font-size: $fs-s;
+    width: 88px;
+    height: 44px;
+    margin: 0 15px;
+  }
+
+  .NDS {
+    #search {
+      width: 157px;
+      height: 44px;
+      padding: 3px;
+      margin: 0;
+    }
+    #search_pd {
+      margin-left: 0;
+    }
+  }
+}
+
+
+.list_area{
+    #pds_list{
+        text-align: center;
+        li{
+          ol{
+            // border: 1px solid blue;
+            display: flex;
+            align-items: center;
+            *{
+              flex-basis: 90px;
+              margin: 5px;
+              // @include borderTest;
+              flex-grow:1;
+            }
+            &:first-child{
+              flex-grow: 0;
+            }
+            }
+        }
+
+        }
+
+        .-off{
+          background-color: #ccc;
+        }
+        .list_item{
+            display: flex;
+            border: 1px solid $color_G;
+            align-items: center;
+            padding: 5px;
+            
+            *{
+              flex-basis: 90px;
+              margin: 5px;
+              // @include borderTest;
+              flex-grow: 1;
+            }
+            img{
+                
+                width: 80px;
+                border: 1px solid $color_B;
+            }
+            input{
+              flex-grow: 0;
+            }
+
+        }
+    }
+
+
+
+
+/* table*/
+/*
+#prd_list {
+    text-align: center;
+  width: 100%;
+  thead {
+    width: 100%;
+    td{
+        font-size: $fs-s;
+    }
+  }
+  tbody {
+    width: 100%;
+    
+
+    tr {
+      margin: 10px 0;
+      
+      td {
+        width: 9%;
+        font-size: $fs-xs;
+        border: 1px solid blue;
+        vertical-align: middle;
+
+        *{
+          @include borderTest
+        }
+        
+        img{
+          width: 60px;
+          margin: 10px;
+          
+        }
+        .prd_cost::before,.prd_price::before{
+          content:'NT$' ;
+          font-size: $fs-xs;
+        }
+        
+      }
+    }
+  }
+}
+
+*/
+
