--- a/src/sass/style.back.scss
+++ b/src/sass/style.back.scss
@@ -13,3 +13,4 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 @import 'backpages/activity_mg';
 @import 'backpages/back_products';
+@import 'backpages/back_product_detail'
