--- a/src/sass/backpages/_back_products.scss
+++ b/src/sass/backpages/_back_products.scss
@@ -1,88 +1,146 @@
 #back_pds {
   .pds_right {
     padding-left: 20%;
-    margin: 0 5%;
+    margin: 0 30px;
 
     @include back_title;
   }
 }
 
-.button_area {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
-  button {
-    font-size: $fs-s;
-    width: 88px;
-    height: 44px;
-    margin: 0 15px;
-  }
-
-  .NDS {
-    #search {
-      width: 157px;
+.btn_area {
+  width: 1000px;
+  margin: 0 auto;
+  .btn1 {
+    margin: 0 auto 20px;
+    display: flex;
+    justify-content: space-between;
+    button {
+      font-size: $fs-s;
+      width: 88px;
       height: 44px;
-      padding: 3px;
-      margin: 0;
+      margin: 0 15px;
     }
-    #search_pd {
-      margin-left: 0;
+
+    .NDS {
+      #search {
+        width: 157px;
+        height: 44px;
+        padding: 3px;
+        margin: 0;
+      }
+      #search_pd {
+        margin-left: 0;
+      }
+    }
+  }
+  .btn2 {
+    display: flex;
+    align-items: center;
+
+    .shoow_off {
+      font-size: $fs-s;
+      margin-left: 10px;
     }
   }
 }
 
-
-.list_area{
-    #pds_list{
-        text-align: center;
-        li{
-          ol{
-            // border: 1px solid blue;
-            display: flex;
-            align-items: center;
-            *{
-              flex-basis: 90px;
-              margin: 5px;
-              // @include borderTest;
-              flex-grow:1;
-            }
-            &:first-child{
-              flex-grow: 0;
-            }
-            }
+.list_area {
+  #pds_list {
+    width: 1000px;
+    text-align: center;
+    margin: 20px auto;
+    li {
+      ol {
+        // border: 1px solid blue;
+        display: flex;
+        align-items: center;
+        * {
+          flex-basis: 90px;
+          margin: 5px;
+          // @include borderTest;
+          flex-grow: 1;
         }
-
+        &:first-child {
+          flex-grow: 0;
         }
-
-        .-off{
-          background-color: #ccc;
+        .fieldName {
+          font-size: 18px;
         }
-        .list_item{
-            display: flex;
-            border: 1px solid $color_G;
-            align-items: center;
-            padding: 5px;
-            
-            *{
-              flex-basis: 90px;
-              margin: 5px;
-              // @include borderTest;
-              flex-grow: 1;
-            }
-            img{
-                
-                width: 80px;
-                border: 1px solid $color_B;
-            }
-            input{
-              flex-grow: 0;
-            }
+      }
+    }
+  }
 
-        }
+  .-off {
+    background-color: #ccc;
+  }
+  .list_item {
+    display: flex;
+    border: 1px solid $color_G;
+    align-items: center;
+    margin: 5px;
+
+    * {
+      flex-basis: 90px;
+      margin: 5px;
+      // @include borderTest;
+      flex-grow: 1;
     }
 
+    .check_container {
+      // @include borderTest;
+      position: relative;
+      * {
+        position: absolute;
+        top: -18px;
+        left: 28px;
+      }
+    }
+    .prd_price::before,
+    .prd_cost::before {
+      content: "NT$";
+      font-size: $fs-xs;
+    }
+    img {
+      width: 80px;
+      border: 1px solid $color_B;
+    }
+    // input{
 
+    // }
+  }
+}
 
+#page_area {
+  width: 1000px;
+  margin: 0 auto;
+  ul {
+  display: flex;
+  float: right;
+
+    li {
+      margin: 5px;
+      background-color: $color_Y;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      color: $color_B;
+
+      &:first-child,
+      &:last-child {
+        background-color: $color_G;
+      }
+    }
+
+    p {
+      text-align: center;
+      transform: translateY(3px);
+    }
+
+    .page_hear {
+      background-color: $color_R;
+    }
+  }
+}
 
 /* table*/
 /*
@@ -128,4 +186,3 @@
 }
 
 */
-
