--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,3 +20,4 @@
 @import './frontpages/member.scss';
 @import './frontpages/member_activity';
 @import './frontpages/member_revise';
+@import './frontpages/member_checklist';
