--- a/src/sass/frontpages/_product_detail.scss
+++ b/src/sass/frontpages/_product_detail.scss
@@ -1,289 +1,382 @@
-.pd_main{
-    @include marginCenter;
-}
+.pd_main {
+  
+  margin-bottom: 30px;
+//   @include borderTest(blue);
 
-.pd__hr{
-    width: 95%;
-    opacity: .7;
-    margin: 70px 0;
-}
-
-.pd_bread{
-    color:$color_G;
-    margin-top: 130px;
-    margin-bottom: 70px;
+  //   麵包屑
+  .pd_bread {
     font-size: $fs-xs;
-}
+    color: $color_G;
+    margin-top: 130px;
+    margin-bottom: 20px;
 
-.pd_area{
-    display: flex;
-    @include marginCenter;
-    @include borderTest;
-    @include pad{
-        display: block;
-    }
-}
-
-// 圖片區
-.pd_figure{
-    max-width: 100%;
-    @include borderTest;
-}
-
-.pd_topPic{
-    display: block;
-    max-width: 590px;
-    @include borderTest;
-    @include pad{
-        max-width: 90%;
-    }
-}
-
-.pd_area img{
-    max-width: 100%;
-}
-
-.pd_pic{
-    display: inline-flex;
-    flex-wrap: nowrap;
-    @include pad{
-        margin: auto;
-        display: none;
-    }
-}
-
-.pd_pic li img{
-    
-    max-width: 183px;
-    margin-right: 5px;
-    @include borderTest;
-    @include pad{
-        
-        
-    }
-}
-
-// 商品info
-.pd_info{
-    flex-basis: 320px;
-    padding-left: 70px;
-    @include borderTest;
-    @include pad{
-        margin: 0;
-    }
-}
-
-#pd_info_name{
-    margin: 20px 0;
-}
-
-#pd_info_ingredient{
-    height: 200px;
-    margin-top: 30px;
-    white-space: pre-wrap;
-}
-
-#pd_info_pricr{
-    font-weight: bold;
-    margin: 20px 0;
-}
-
-h4#pd_info_pricr::before{
-    content:"NT$";
-    font-size: $fs-m;
-    font-weight: bold;
     @include mobile{
-        font-size: $fs-s;
-       
+        margin-top: 90px;
     }
+
+  }
+
+  .pd_area {
+    display: flex;
+    @include borderTest(green);
+    @include pad {
+      flex-direction: column;
+    }
+
+    .pd_pic {
+      width: 590px;
+      margin-right: 30px;
+      display: flex;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      //   @include borderTest(black);
+      //   *{border: 1px solid yellow;}
+      @include pad {
+        margin: 0 auto;
+        width: 90%;
+      }
+/*
+      li {
+        margin-bottom: 10px;
+
+        &:nth-child(3) {
+          margin-right: 5px;
+        }
+        &:last-child {
+          margin-right: 0;
+        }
+        &:nth-child(n + 2) {
+          max-width: 183px;
+        }
+
+        .top_pic {
+          max-width: 100%;
+          @include borderTest;
+        }
+        img {
+          max-width: 100%;
+        }
+*/
+        @media (min-width: 992.98px) and (max-width: 1200px) {
+          margin: 0;
+          &:nth-child(n + 2) {
+            max-width: 100px;
+          }
+        }
+      }
+    }
+  }
+// }
+
+// 商品資料
+.pd_info {
+  flex-grow: 1;
+  margin: 0 10px;
+
+  @include borderTest;
+  //   margin-bottom: 20px;
+
+  #pd_info_name {
+    margin-bottom: 30px;
+  }
+  .pd_info_slog {
+    margin-bottom: 20px;
+  }
+  #pd_info_ingredient {
+    height: 200px;
+    line-height: $LH-24;
+  }
+  #pd_info_pricr {
+    font-weight: bold;
+    margin: 20px 0;
+
+    &::before {
+      content: "NT$";
+      font-size: $fs-m;
+      font-weight: bold;
+      @include mobile {
+        font-size: $fs-s;
+      }
+    }
+  }
+  @include pad {
+    margin: 0 auto;
+    width: 90%;
+  }
 }
 
-.pd_info_stock{
-    // display: inline-flex;
-    // align-items: center;
-    // justify-content: center;
-    margin-bottom: 70px;
+// 商品數量區
+.pd_info_stock {
+  display: flex;
+  align-items: center;
+  // justify-content: center;
+  margin-bottom: 70px;
+
+  @media (max-width: 1200.98px) and (min-width: 768px) {
+    flex-direction: column;
+    align-items: start;
+  }
 }
 
 // 數量BTN
-#pd_stockCount{
-    margin:0 10px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+#pd_stockCount {
+  margin: 0 10px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.pd_info_stock:first-child{
-    margin-right: 10px;
+.pd_info_stock:first-child {
+  margin-right: 10px;
 }
 
-#pd_stockCount + h5{
-margin-left: 10px;
+#pd_stockCount ~ h5 {
+  margin-left: 10px;
 }
 
-.pd_stockCount_btn{
-    background-color: $color_Y;
-    color: $color_B;
-    border: 1px solid $color_Y;
-    font-size: $fs-s;
-    line-height: 32px;
-    &:active{
-        transform: translateY(3px);
-    }
-    &:hover{
-        background-color: $color_R;
-        border: 1px solid $color_R;
-    }
+// +_按鈕
+.pd_stockCount_btn {
+  background-color: $color_Y;
+  color: $color_B;
+  border: 1px solid $color_Y;
+  font-size: $fs-s;
+  line-height: 32px;
+  &:active {
+    transform: translateY(3px);
+  }
+  &:hover {
+    background-color: $color_R;
+    border: 1px solid $color_R;
+  }
 }
 
-#pd_stockCount_input{
-    background-color: $color_W;
-    border: 1px solid $color_Y;
-    font-size: $fs-s;
-    height: 36px;
-    width: 50px;
-    text-align: center;
+// 數量
+#pd_stockCount_input {
+  background-color: $color_W;
+  border: 1px solid $color_Y;
+  font-size: $fs-s;
+  height: 36px;
+  width: 50px;
+  text-align: center;
 }
 
 // 購買按鈕
-.pd_info_btn{
-    display: flex;
-    flex-direction: column;
+.pd_info_btn {
+  display: flex;
+  flex-direction: column;
 }
 
-#pd_info_cart{
-    max-width: 386px;
-    height: 90px;
-    background-color: $color_W;
-    border: 1px solid $color_Y;
-    color: $color_Y;
-    font-size: $fs-s;
-    line-height: $LH-38;
-    margin-bottom: 18px;
-    transition: 1s;
-    &:hover{
-        background-color: $color_Y;
-        color: $color_G;
-    }
-}
-
-#pd_info_buy{
-    display: block;
-    max-width: 386px;
-    height: 90px;
-    background-color: $color_R;
-    border: 1px solid $color_R;
-    color: $color_W;
-    line-height: $LH-38;
-    font-size: $fs-s;
-    transition: 1s;
-    &:hover{
-        background-color: $color_Y;
-        color: $color_G;
-    }
-}
-
-
-// 介紹區塊
-.pd_intro_h3{
+#pd_info_cart {
+  display: block;
+  text-align: center;
+  max-width: 386px;
+  height: 90px;
+  background-color: $color_W;
+  border: 1px solid $color_Y;
+  color: $color_Y;
+  font-size: $fs-s;
+  line-height: 90px;
+  margin-bottom: 18px;
+  transition: 1s;
+  &:hover {
+    background-color: $color_Y;
     color: $color_G;
-    font-weight: bold;
-    text-align: center;
+  }
 }
 
-.pd_intro{
-    margin: 20px;
-    .pd_intro_pic{
-        text-align: right;
-    }
+#pd_info_buy {
+  display: block;
+  text-align: center;
+  max-width: 386px;
+  height: 90px;
+  background-color: $color_R;
+  border: 1px solid $color_R;
+  color: $color_W;
+  line-height: 90px;
+  font-size: $fs-s;
+  transition: 1s;
+  &:hover {
+    background-color: $color_Y;
+    color: $color_G;
+  }
 }
 
-
-
-
-//推薦區
-.pd_recommend{
-    margin-top: 100px 0 0 0;
-    text-align: center;
-    display: flex;
+@include pad {
+  .pd_info_stock {
     flex-direction: column;
+    align-items: start;
+
+    #pd_stockCount {
+      margin: 0;
+    }
+    #pd_stockCount ~ h5 {
+      margin-left: 0px;
+    }
+  }
+  #pd_info_cart,
+  #pd_info_buy {
+    max-width: 100%;
+  }
+}
+
+// 商品描述
+.pd_intro_h3 {
+  color: $color_G;
+  font-weight: bold;
+  text-align: center;
+}
+
+.intro_area {
+  // 區塊
+  .pd_intro {
+    width: 800px;
+    display: flex;
     align-items: center;
-    h3{
-        margin: 125px auto;
-        @include pad{
-            margin: 50px auto;
+    margin: 20px auto;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    padding: 25px;
+    position: relative;
+
+    .pd_intro_pic {
+      display: flex;
+      align-items: center;
+      width: 300px;
+      height: 300px;
+      border: 1px solid #ccc;
+      border-radius: 50%;
+      overflow: hidden;
+      font-size: 0;
+      line-height: 0;
+      margin: 0 15px;
+
+      img {
+        width: 102%;
+      }
+    }
+    p {
+      width: 400px;
+      max-width: 100%;
+      height: 88px;
+      margin: 15px;
+      padding: 10px;
+      font-size: $fs-s;
+      resize: none;
+    }
+  }
+  @media (max-width: 992.98px) and (min-width: 768px) {
+    .pd_intro {
+        width: 600px;
+        flex-direction: column;
+        justify-content: center;
+    }
+  }
+  @include pad{
+    .pd_intro {
+        width: 90%;
+        flex-direction: column;
+        justify-content: center;
+
+        p{
+            height: auto;
+            font-size: $fs-xs;
+            
         }
     }
+    
+  }
+}
+
+// 水平線hr
+.pd__hr {
+  border: 1px solid #ccc;
+  margin: 20px 0;
+}
+
+//推薦區
+.pd_recommend {
+  margin-top: 100px 0 0 0;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h3 {
+    margin: 125px auto;
+    @include pad {
+      margin: 50px auto;
+    }
+  }
 }
 
 @keyframes slide-top {
-    0%{
-        transform: translateY(3%);
-    }
-    100%{transform: translateY(-3%)}
+  0% {
+    transform: translateY(3%);
+  }
+  100% {
+    transform: translateY(-3%);
+  }
 }
 
-.pd_recommend_list{
-    width: 100%;
-    
-    display: inline-flex;
-    
-    @include borderTest;
+.pd_recommend_list {
+  width: 100%;
+
+  display: inline-flex;
+
+  @include borderTest;
+
+  @include pad {
+    flex-direction: column;
+    max-width: 90%;
+  }
+
+  a > li {
+    background-color: $color_W;
+    margin: 50px 25px 50px;
+    box-shadow: 0 0 20px rgba(33, 33, 33, 0.2);
+    border-radius: 5px;
+    transition: 0.5s;
+    padding-bottom: 10px;
+    // @include borderTest;
+    &:hover {
+      -webkit-animation: slide-top 0.5s ease-out infinite alternate;
+      animation: slide-top 0.5s ease-out infinite alternate;
+    }
+
+    img {
+      border-radius: 5px;
+      max-width: 100%;
+    }
+    p {
+      display: inline-block;
+      font-size: $fs-s;
+      line-height: $LH-24;
+      margin-bottom: 5px;
+    }
 
     @include pad{
-        flex-direction: column;
-        max-width: 90%;
+        margin: 20px 25px 20px;
     }
-      
-    a>li{
-        background-color: $color_W;
-        margin: 50px 25px 50px;
-        box-shadow: 0 0 20px rgba(33,33,33,.2);
-        border-radius: 5px;
-        transition: .5s;
-        padding-bottom: 10px;
-        @include borderTest;
-        &:hover{
-            -webkit-animation: slide-top 0.5s ease-out infinite alternate ;
-	        animation: slide-top 0.5s ease-out infinite alternate ;
-        }
-        
-        img{
-            border-radius: 5px;
-            max-width: 100%;
-        }
-        p{
-            display: inline-block;
-            font-size: $fs-s;
-            line-height: $LH-24;
-            margin-bottom: 5px;
-            
-        }
-    
-    }
-  
+  }
 }
 
-.pd_recommend_list a{
-    color: $color_B;
-    
+.pd_recommend_list a {
+  color: $color_B;
 }
 
-.pd_recommend_text{
-    padding: 20px;
-    text-align: left;
+.pd_recommend_text {
+  padding: 20px;
+  text-align: left;
 }
 
 //品名最大10字
-.pd_recommend_name{
-    text-align: left;
+.pd_recommend_name {
+  text-align: left;
 }
-.pd_recommend_price{
-    float: right;
+.pd_recommend_price {
+  float: right;
 }
 
-.pd_recommend_price::before{
-    content:"NT$";
-    font-size: $fs-s;
-    
+.pd_recommend_price::before {
+  content: "NT$";
+  font-size: $fs-s;
 }
