--- a/src/layout/head.html
+++ b/src/layout/head.html
@@ -7,6 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Oswald:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="img/logo_web.ico" type="image/x-icon"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./js/vue.js"></script>
-    <!-- <script src="./js/vue.min.js"></script> -->
+    <script src="./js/vendors/jquery-3.6.0.min.js"></script>
+    <script src="./js/vendors/vue.js"></script>
+    <!-- <script src="./js/vendors/vue.min.js"></script> -->
